iota.log
*** Error compiling 'iota/command_line/iota_bulletproof.py'...
  File "iota/command_line/iota_bulletproof.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_filter_pickles.py'...
  File "iota/command_line/iota_filter_pickles.py", line 62
    print "WARNING: Problem creating folder. If the folder exists, it will get overwritten."
                                                                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "WARNING: Problem creating folder. If the folder exists, it will get overwritten.")?

*** Error compiling 'iota/command_line/iota_process.py'...
  File "iota/command_line/iota_process.py", line 64
    except IOTATermination, e:
                          ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_run.py'...
  File "iota/command_line/iota_run.py", line 86
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_analysis.py'...
  File "iota/components/iota_analysis.py", line 127
    except IOError, e:
                  ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_cctbx.py'...
  File "iota/components/iota_cctbx.py", line 268
    print tmppath
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print tmppath)?

*** Error compiling 'iota/components/iota_controls.py'...
  File "iota/components/iota_controls.py", line 185
    print "column clicked"
                         ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "column clicked")?

*** Error compiling 'iota/components/iota_dialogs.py'...
  File "iota/components/iota_dialogs.py", line 384
    print "DEBUG: RANDOM SAMPLE ON? ", self.random_subset
                                    ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "DEBUG: RANDOM SAMPLE ON? ", self.random_subset)?

*** Error compiling 'iota/components/iota_dials.py'...
  File "iota/components/iota_dials.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_frames.py'...
  File "iota/components/iota_frames.py", line 877
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_gui_init.py'...
  File "iota/components/iota_gui_init.py", line 261
    except Sorry, e:
                ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_image.py'...
  File "iota/components/iota_image.py", line 145
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_init.py'...
  File "iota/components/iota_init.py", line 106
    print "\nERROR: No data found!"
                                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "\nERROR: No data found!")?

*** Error compiling 'iota/components/iota_input.py'...
  File "iota/components/iota_input.py", line 394
    except Sorry,e:
                ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_misc.py'...
  File "iota/components/iota_misc.py", line 93
    print entry
              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int entry)?

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 111
    except IOTATermination, e:
                          ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_tracker.py'...
  File "iota/components/iota_tracker.py", line 451
    print "column clicked"
                         ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "column clicked")?

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 339
    print 'ERROR: Need image or datablock for Radial Average Calculator'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'ERROR: Need image or datablock for Radial Average Calculator')?

